# sparrow-seL4_tools

./: .gitignore
cmake-tool/helpers/: application_settings.cmake  cpio.cmake  rootserver.cmake  shoehorn.py  simulation.cmake
elfloader-tool/: CMakeLists.txt  helpers.cmake
elfloader-tool/src/arch-riscv/: crt0.S
kmem-tool/: kmem.py  test_kmem.py
misc/elfconvert/: Cargo.toml
misc/elfconvert/src/: convert.rs  lib.rs  main.rs
