# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "elfconvert"
version = "0.1.0"
edition = "2018"

[dependencies]
# TODO(sleffler): Remove thread_local version pin from the underlying dependency
# when we clean up the nightly toolchain.
thread_local = "=1.1.4"

clap = { version = "3.2", features = [ "derive" ] }
crc = { version = "1.4.0", default-features = false }
log = { version = "0.4" }
stderrlog = { version = "0.5" }
xmas-elf = { git = "https://github.com/nrc/xmas-elf" }
